attempt ddd structure

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,7 @@
 {
-  "extends": ["next", "next/core-web-vitals"]
+  "plugins": ["no-loops"],
+  "extends": ["next", "next/core-web-vitals", "prettier"],
+  "rules": {
+    "no-console": "error"
+  }
 }
