--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,6 @@
 {
-  "trailingComma": "es5",
-  "tabWidth": 2,
   "semi": true,
+  "trailingComma": "none",
   "singleQuote": true,
-  "printWidth": 100
+  "printWidth": 80
 }
